# m3pi_ros

./: CMakeLists.txt  README.md  api_example.py  m3pi.py  m3pi_example.py  package.xml  tutorial_writeup.rtf
src/: api_example.py  controller.py  m3pi.launch  m3pi_ros.py  m3pi_sim.launch  m3pi_sim.py  m3pi_sim.rviz  m3pi_sim_test.py  pub_world_frame.py  test_robot.py
